# rpl_sdl

./: .env.example  .gitignore  .justfile  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml  rpl_sdl.lab.yaml
docker/: infra.compose.yaml  managers.compose.yaml  nodes.compose.yaml
frigate/: .gitignore  rpl_frigate.compose.yaml
frigate/config/: config.yaml
managers/: autobots_workcell.manager.yaml  rpl_data.manager.yaml  rpl_data_manager.manager.yaml  rpl_sdl_data.manager.yaml  rpl_sdl_event.manager.yaml  rpl_sdl_event_manager.manager.yaml  rpl_sdl_experiment.manager.yaml  rpl_sdl_experiment_manager.manager.yaml  rpl_sdl_lab.manager.yaml  rpl_sdl_lab_manager.manager.yaml  rpl_sdl_location.manager.yaml  rpl_sdl_resource.manager.yaml  rpl_sdl_resource_manager.manager.yaml
nodes/: camera_1.info.yaml  camera_1.node.info.yaml  camera_1.node.yaml  camera_2.info.yaml  camera_3.info.yaml  gamma.info.yaml  ot2_gamma.node.info.yaml  ot2_gamma.node.yaml  pf400.info.yaml  pf400.node.info.yaml  pf400.node.yaml  sciclops.node.info.yaml  sciclops.node.yaml
workcells/: autobots_wc.workcell.yaml
